# flask-fenics

./: .dockerignore  README.md  compose.dev.yml
app/: .gitignore  dockerfile  pyproject.toml  run.py
app/src/: __init__.py  socket.py  solver.py  tasks.py  views.py
app/src/static/: package.json
app/src/static/src/: app.jsx  configurate.jsx  index.jsx  manager.jsx  monitor.jsx  task.jsx  toolkit.jsx
